@@ -110,7 +110,12 @@ archive.</p>
     encoding.</td>
     <td align="center" valign="top">No</td>
   </tr>
-
+  <tr>
+    <td valign="top">failOnEmptyArchive</td>
+    <td valign="top">whether trying to extract an empty archive is an
+      error. <em>since Ant 1.8.0</em></td>
+    <td valign="top" align="center">No, defaults to true</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>
